feat(epic): add controller to handle repo logic